// Vitest Snapshot v1

exports[`search > should with namespace 1`] = `
[
  {
    "as": "UiNestedCheckbox",
    "from": "src/components/ui/nested/checkbox.vue",
  },
  {
    "as": "UiButton",
    "from": "src/components/ui/button.vue",
  },
  {
    "as": "Avatar",
    "from": "src/components/global/avatar.vue",
  },
  {
    "as": "Book",
    "from": "src/components/book/index.vue",
  },
  {
    "as": "ComponentC",
    "from": "src/components/component-c.vue",
  },
  {
    "as": "Recursive",
    "from": "src/components/Recursive.vue",
  },
  {
    "as": "ComponentD",
    "from": "src/components/ComponentD.vue",
  },
  {
    "as": "ComponentB",
    "from": "src/components/ComponentB.vue",
  },
  {
    "as": "ComponentAsync",
    "from": "src/components/ComponentAsync.vue",
  },
  {
    "as": "ComponentA",
    "from": "src/components/ComponentA.vue",
  },
]
`;

exports[`search > should work 1`] = `
[
  {
    "as": "Checkbox",
    "from": "src/components/ui/nested/checkbox.vue",
  },
  {
    "as": "Button",
    "from": "src/components/ui/button.vue",
  },
  {
    "as": "Avatar",
    "from": "src/components/global/avatar.vue",
  },
  {
    "as": "Book",
    "from": "src/components/book/index.vue",
  },
  {
    "as": "ComponentC",
    "from": "src/components/component-c.vue",
  },
  {
    "as": "Recursive",
    "from": "src/components/Recursive.vue",
  },
  {
    "as": "ComponentD",
    "from": "src/components/ComponentD.vue",
  },
  {
    "as": "ComponentB",
    "from": "src/components/ComponentB.vue",
  },
  {
    "as": "ComponentAsync",
    "from": "src/components/ComponentAsync.vue",
  },
  {
    "as": "ComponentA",
    "from": "src/components/ComponentA.vue",
  },
]
`;
